# AtriusFhirLib

./: Cargo.toml
crates/AtriusFhir/: Cargo.toml  build.rs
crates/AtriusFhir/src/: date_time.rs  element.rs  fhir_version.rs  lib.rs  parameters.rs  precise_decimal.rs  r6.rs.template
crates/AtriusFhir/src/r4/: mod.rs
crates/AtriusFhir/src/r4/complex_types/: address.rs  age.rs  annotation.rs  attachment.rs  codeable_concept.rs  coding.rs  contact_detail.rs  contact_point.rs  contributor.rs  count.rs  data_requirement.rs  distance.rs  dosage.rs  duration.rs  element_definition.rs  expression.rs  extension.rs  human_name.rs  identifier.rs  marketing_status.rs  meta.rs  mod.rs  money.rs  narrative.rs  parameter_definition.rs  period.rs  population.rs  prod_characteristic.rs  product_shelf_life.rs  quantity.rs  range.rs  ratio.rs  reference.rs  related_artifact.rs  sampled_data.rs  signature.rs  substance_amount.rs  timing.rs  trigger_definition.rs  usage_context.rs
crates/AtriusFhir/src/r4/primitives/: base64_binary.rs  boolean.rs  canonical.rs  code.rs  date.rs  date_time.rs  decimal.rs  id.rs  instant.rs  integer.rs  markdown.rs  oid.rs  positive_int.rs  string.rs  time.rs  unsigned_int.rs  uri.rs  url.rs  uuid.rs  xhtml.rs
crates/AtriusFhir/src/r4/resources/: account.rs  activity_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  audit_event.rs  basic.rs  binary.rs  biologically_derived_product.rs  body_structure.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  catalog_entry.rs  charge_item.rs  charge_item_definition.rs  claim.rs  claim_response.rs  clinical_impression.rs  code_system.rs  communication.rs  communication_request.rs  compartment_definition.rs  composition.rs  concept_map.rs  condition.rs  consent.rs  contract.rs  coverage.rs  coverage_eligibility_request.rs  coverage_eligibility_response.rs  detected_issue.rs  device.rs  device_definition.rs  device_metric.rs  device_request.rs  device_use_statement.rs  diagnostic_report.rs  (+108 more)
crates/AtriusFhir/src/r4b/: mod.rs
crates/AtriusFhir/src/r4b/complex_types/: address.rs  age.rs  annotation.rs  attachment.rs  codeable_concept.rs  codeable_reference.rs  coding.rs  contact_detail.rs  contact_point.rs  contributor.rs  count.rs  data_requirement.rs  distance.rs  dosage.rs  duration.rs  element_definition.rs  expression.rs  extension.rs  human_name.rs  identifier.rs  marketing_status.rs  meta.rs  mod.rs  money.rs  narrative.rs  parameter_definition.rs  period.rs  population.rs  prod_characteristic.rs  product_shelf_life.rs  quantity.rs  range.rs  ratio.rs  ratio_range.rs  reference.rs  related_artifact.rs  sampled_data.rs  signature.rs  timing.rs  trigger_definition.rs  (+1 more)
crates/AtriusFhir/src/r4b/primitives/: base64_binary.rs  boolean.rs  canonical.rs  code.rs  date.rs  date_time.rs  id.rs  (+14 more)
crates/AtriusFhir/src/r5/: mod.rs
crates/AtriusFhir/src/r6/: mod.rs
crates/AtriusFhirGen/: Cargo.toml  build.rs
crates/AtriusFhirGen/resources/R6/: conceptmaps.json  dataelements.json  download_metadata.json  profiles-others.json  profiles-types.json  search-parameters.json  version.info  view-definition-bundle-entry.json
crates/AtriusFhirGen/src/: base_types.rs  bundle.rs  capability_statement.rs  complex_datatypes.rs  constraint_helpers.rs  element_definition.rs  format_helpers.rs  gen_element_definitions.rs  gen_helpers.rs  generate_resource_enum.rs  generate_struct_element_doc.rs  generate_version_header.rs  lib.rs  main.rs  meta_datatypes.rs  others.rs  structure_definition.rs
crates/AtriusFhirPath/: Cargo.toml
crates/AtriusFhirPath/benches/: cli_benches.rs  evaluator_benches.rs  parser_benches.rs  server_benches.rs
crates/AtriusFhirPath/examples/: test_ucum.rs
crates/AtriusFhirPath/grammar/: fhirpath.g4
crates/AtriusFhirPath/src/: aggregate_function.rs  boolean_functions.rs  boundary_functions.rs  cli.rs  collection_functions.rs  collection_navigation.rs  contains_function.rs  conversion_functions.rs  date_operation.rs  datetime_impl.rs  distinct_functions.rs  engine.rs  error.rs  evaluator.rs  extension_function.rs  fhir_type_hierarchy.rs  handlers.rs  html_checks_function.rs  json_utils.rs  lib.rs  long_conversion.rs  models.rs  not_function.rs  parse_debug.rs  parser.rs  polymorphic_access.rs  reference_key_functions.rs  repeat_function.rs  resource_type.rs  server.rs  set_operations.rs  subset_functions.rs  terminology_client.rs  terminology_functions.rs  trace_function.rs  type_function.rs  type_inference.rs  ucum.rs
crates/AtriusFhirPath/tests/: all_function_tests.rs  boundary_debug_tests.rs  boundary_function_integration_tests.rs  comment_test.rs  context_trace_test.rs  date_operation_tests.rs  datetime_boundary_tests.rs  debug_datetime_boundary.rs  debug_string_boundary_tests.rs  define_variable_test.rs  enhanced_variable_tests.rs  evaluator_tests.rs  extension_tests.rs  fhir_boundary_tests.rs  is_as_method_tests.rs  join_function_test.rs  oftype_datetime_tests.rs  parse_debug_test.rs  parser_tests.rs  polymorphic_r4_tests.rs  polymorphic_tests.rs  precision_tests.rs  r4_tests.rs  r5_tests.rs  reference_key_debug.rs  test_boundary_zero.rs  trace_api_test.rs  trace_tests.rs  tree_navigation_tests.rs  truncate_tests.rs  type_operation_tests.rs  type_preservation_integration_test.rs  type_reflection_tests.rs  uri_type_test.rs  uuid_type_preservation_test.rs
crates/AtriusFhirPath/tests/common/: context.rs  mod.rs  parser.rs  runner.rs
crates/AtriusFhirServer/: Cargo.toml
crates/AtriusFhirServer/src/: main.rs
crates/AtriusMacros/: Cargo.toml
crates/AtriusMacros/src/: deserialize_impl.rs  extract_type_names_elements.rs  fhir_path_enum_impl.rs  fhir_path_field_struct_impl.rs  fhir_validate.rs  field_helpers.rs  lib.rs  serialize_is_empty_impl.rs  type_helpers.rs
crates/AtriusSqlOnFhir/: Cargo.toml
crates/AtriusSqlOnFhir/src/: cli.rs  data_source.rs  error.rs  handlers.rs  lib.rs  mod.rs  models.rs  parquet_schema.rs  server.rs  streaming.rs  traits.rs
crates/AtriusValueSetGen/: Cargo.toml
crates/AtriusValueSetGen/src/: main.rs
(+4043 files in other folders)
