[package]
name = "atrius-fhir-lib"
version.workspace = true
edition.workspace = true

[features]
default = ["R5"]
R4 = []
R4B = []
R5 = []
R6 = []
skip-r6-download = []

[dependencies]
serde = { workspace = true}
serde_json = { workspace = true, features = ["raw_value"] }

chrono = { workspace = true }
# Re-add serde-with-arbitrary-precision, keep macros
rust_decimal = { version = "1.0", features = ["serde-with-arbitrary-precision", "macros"] }
clap = "4.5.53"
atrius-fhirpath-support = { path = "../AtriusFhirPathSupport"}
atrius-macros = { path = "../AtriusMacros"}
time = "0.3"

[dev-dependencies]
rust_decimal_macros = "1.0"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]