[package]
name = "atrius-fhir-server"
version.workspace = true
edition.workspace = true

[features]
default = ["R5"]
R4  = ["atrius-fhir-lib/R4"]
R4B = ["atrius-fhir-lib/R4B"]
R5  = ["atrius-fhir-lib/R5"]
R6  = ["atrius-fhir-lib/R6"]
[dependencies]
atrius-fhir-lib = { path = "../AtriusFhir", default-features = false, features = ["R5"]}
atrius-fhirpath-support = { path = "../AtriusFhirPathSupport"}
atrius-fhir-path = { path = "../AtriusFhirPath"}
serde_json = { workspace = true }