[package]
name = "atrius-sql-on-fhir"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atrius-sof-server"
path = "src/server.rs"

[[bin]]
name = "atrius-sof-cli"
path = "src/cli.rs"

[features]
default = ["R5"]
R4 = ["atrius-fhir-lib/R4", "atrius-fhir-path/R4"]
R4B = ["atrius-fhir-lib/R4B", "atrius-fhir-lib/R4B"]
R5 = ["atrius-fhir-lib/R5", "atrius-fhir-lib/R5"]
R6 = ["atrius-fhir-lib/R6", "atrius-fhir-lib/R6"]

[dependencies]
atrius-fhir-lib = { path = "../AtriusFhir"}
atrius-fhir-path = { path = "../AtriusFhirPath"}
atrius-fhirpath-support = { path = "../AtriusFhirPathSupport"}
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "query"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.0"
mime = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
async-trait = "0.1"
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
rayon = "1.8"
arc-swap = "1.6"
parking_lot = "0.12"
arrow = "54.0"
parquet = "54.0"
zip = "2.2"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.5"

[dev-dependencies]
axum-test = "18.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
